feat: Production-grade upgrade v3.0.0 - EQHM compliant agents and skills (#1)
## Summary
Complete production-grade upgrade of all agents, skills, and commands with:
- Input/Output JSON schemas for all agents
- ReAct pattern workflow implementation
- Error handling strategies with fallback mechanisms
- Token/cost optimization settings
- Comprehensive troubleshooting guides and debug checklists

## Changes

### Agents (8) - Upgraded to v3.0.0
- All agents now include: input_schema, output_schema, token_budget,
  max_iterations, ReAct workflow, fallback strategies, debug checklists
- Agent responsibilities clearly defined with boundaries

### Skills (12) - SASMP v1.3.0 Compliant
- All skills include: parameter validation, PRIMARY/SECONDARY bond types,
  quick reference code examples, troubleshooting tables
- Fixed java-testing-advanced bonded_agent to 04-java-testing

### Commands (4) - v3.0.0
- All commands include: parameter validation in frontmatter,
  exit codes documentation, troubleshooting tables

### Documentation
- Updated plugin.json to v3.0.0
- Updated README.md with correct agent/skill information
- Added comprehensive CHANGELOG entry

### Integrity Check
- All 12 skills correctly bonded to valid agents
- Zero orphan skills, zero broken links, zero circular dependencies

Co-authored-by: Claude <noreply@anthropic.com>